--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "ixudra/curl": "^6.22",
         "jenssegers/agent": "^2.6",
         "laravel/breeze": "1.9.2",
         "laravel/framework": "^8.0",
